--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-dinky
+
+integration_spreadsheet_key: 1jX7RFQOWcpLh9axXCYWIzhva7KVdJcJ4m2-Sihxi_nc
+
+github_user: hack-education-data
+github_repo: y-combinator
