--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,4 +1,8 @@
-- Name: Jonathan Grayer
-  Company: Kaplan
-  Role: CEO
-  Notes: Jerk
+- Name: Sam Altman
+  Organization: Y Combinator
+  Role: President
+  Notes: ''
+- Name: Paul Graham
+  Organization: Y Combinator
+  Role: Co-founder
+  Notes: ''
