--- a/_data/investors.yaml
+++ b/_data/investors.yaml
@@ -1,5 +1,3 @@
-- Company: Graham Holdings
-  Date: '1984'
-  Notes: >-
-    The Washington Post Company purchased Stanley H. Kaplan Educational Centers
-    Limited
+- Name: Sequoia Capital
+  Date: '2009'
+  Notes: '$2 million (with Ron Conway, Paul Buchheim, and Aydin Senkut)'
