--- a/_data/investors.yaml
+++ b/_data/investors.yaml
@@ -1,3 +1,12 @@
 - Name: Sequoia Capital
   Date: '2009'
   Notes: '$2 million (with Ron Conway, Paul Buchheim, and Aydin Senkut)'
+- Name: Bridge Bank
+  Date: '2016'
+  Notes: $15 million (with Trinity Capital Investment)
+- Name: XG Ventures
+  Date: '2010'
+  Notes: $8.25 million (with Sequoia Capital)
+- Name: Unknown
+  Date: '2015'
+  Notes: $700 million
