--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -6,3 +6,11 @@
   Organization: Y Combinator
   Role: Co-founder
   Notes: ''
+- Name: Geoff Ralston
+  Organization: Y Combinator
+  Role: Partner
+  Notes: ''
+- Name: Geoff Ralston
+  Organization: Imagine K12
+  Role: Co-founder
+  Notes: ''
