--- a/_data/acquisitions.yaml
+++ b/_data/acquisitions.yaml
@@ -1,3 +1,3 @@
-- Name: Sequoia Capital
-  Date: '2009'
-  Notes: '$2 million (with Ron Conway, Paul Buchheim, and Aydin Senkut)'
+- Name: Imagine K12
+  Date: ''
+  Notes: ''
