--- a/_data/investments.yaml
+++ b/_data/investments.yaml
@@ -73,3 +73,9 @@
 - Name: Launchpad Toys
   Date: '2011'
   Notes: '$17,000'
+- Name: Clever
+  Date: '2014'
+  Notes: $10.3 million in Series A (personal investment of Paul Graham)
+- Name: ClassDojo
+  Date: '2012'
+  Notes: $1.6 million in seed funding (personal investment of Paul Graham)
