--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -14,3 +14,7 @@
   Organization: Imagine K12
   Role: Co-founder
   Notes: ''
+- Name: Peter Thiel
+  Organization: Y Combinator
+  Role: ''
+  Notes: ''
