--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -16,5 +16,17 @@
   Notes: ''
 - Name: Peter Thiel
   Organization: Y Combinator
-  Role: ''
+  Role: Advisor
+  Notes: ''
+- Name: Peter Thiel
+  Organization: Founders Fund
+  Role: Co-founder
+  Notes: ''
+- Name: Peter Thiel
+  Organization: Mithril Capital Management
+  Role: Co-founder
+  Notes: ''
+- Name: Peter Thiel
+  Organization: Valar Ventures
+  Role: Founder
   Notes: ''
