--- a/_data/investments.yaml
+++ b/_data/investments.yaml
@@ -79,3 +79,6 @@
 - Name: Outschool
   Date: '2017'
   Notes: $1.4 million in seed funding
+- Name: Peergrade
+  Date: '2017'
+  Notes: $1.5 million in seed funding
