--- a/_data/investments.yaml
+++ b/_data/investments.yaml
@@ -82,3 +82,6 @@
 - Name: Peergrade
   Date: '2017'
   Notes: $1.5 million in seed funding
+- Name: Lambda School
+  Date: '2018'
+  Notes: $4 million in seed funding
