--- a/_data/investments.yaml
+++ b/_data/investments.yaml
@@ -85,3 +85,6 @@
 - Name: Lambda School
   Date: '2018'
   Notes: $4 million in seed funding
+- Name: Edwin
+  Date: '2018'
+  Notes: $1.5 million in seed funding
