--- a/_data/investments.yaml
+++ b/_data/investments.yaml
@@ -88,3 +88,9 @@
 - Name: Edwin
   Date: '2018'
   Notes: $1.5 million in seed funding
+- Name: Juni Learning
+  Date: '2018'
+  Notes: '$790,000 in seed funding (personal investment of Jessica Livingston)'
+- Name: Repl.it
+  Date: '2018'
+  Notes: $4.5 million in seed funding
